5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1675_1932.log
== TEST (2019-04-28 09:45:54) 
-- CODE:
do1 = float(input("distancia entre os olhos imagem 1: "))
dnq1 = float(input("distancia entre nariz e queixo imagem 1: "))
do2 = float(input("distancia entre os olhos imagem 2: "))
dnq2 = float(input("distancia entre nariz e queixo imagem 2: "))
do3 = float(input("distancia entre os olhos imagem 3: "))
dnq3 = float(input("distancia entre nariz e queixo imagem 3: "))
p1 = do1/dnq1
p2 = do2/dnq2
p3 = do3/dnq3
c1 = abs(p1-p2)
c2 = abs(p2-p3)
c3 = abs(p1-p3)
if c1<c2<c3:
	print("1 e 2")
elif c2<c3<c1:
	print("2 e 3")
elif c3<c1<c2:
	print("1 e 3")
elif c2<c1<c3:
	print("2 e 3")
elif c3<c2<c1:
	print("1 e 3")
if c1<c3<c2:
	print("1 e 2")
-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 09:46:11) 
-- CODE:
do1 = float(input("distancia entre os olhos imagem 1: "))
dnq1 = float(input("distancia entre nariz e queixo imagem 1: "))
do2 = float(input("distancia entre os olhos imagem 2: "))
dnq2 = float(input("distancia entre nariz e queixo imagem 2: "))
do3 = float(input("distancia entre os olhos imagem 3: "))
dnq3 = float(input("distancia entre nariz e queixo imagem 3: "))
p1 = do1/dnq1
p2 = do2/dnq2
p3 = do3/dnq3
c1 = abs(p1-p2)
c2 = abs(p2-p3)
c3 = abs(p1-p3)
if c1<c2<c3:
	print("1 e 2")
elif c2<c3<c1:
	print("2 e 3")
elif c3<c1<c2:
	print("1 e 3")
elif c2<c1<c3:
	print("2 e 3")
elif c3<c2<c1:
	print("1 e 3")
if c1<c3<c2:
	print("1 e 2")
-- EXECUTION TIME:
0.163639
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:

-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 09:47:00) 
-- CODE:
do1 = float(input("distancia entre os olhos imagem 1: "))
dnq1 = float(input("distancia entre nariz e queixo imagem 1: "))
do2 = float(input("distancia entre os olhos imagem 2: "))
dnq2 = float(input("distancia entre nariz e queixo imagem 2: "))
do3 = float(input("distancia entre os olhos imagem 3: "))
dnq3 = float(input("distancia entre nariz e queixo imagem 3: "))
p1 = do1/dnq1
p2 = do2/dnq2
p3 = do3/dnq3
c1 = abs(p1-p2)
c2 = abs(p2-p3)
c3 = abs(p1-p3)
if c1<c2<c3:
	print("1 e 2")
elif c2<c3<c1:
	print("2 e 3")
elif c3<c1<c2:
	print("1 e 3")
elif c2<c1<c3:
	print("2 e 3")
elif c3<c2<c1:
	print("1 e 3")
elif c1<c3<c2:
	print("1 e 2")
-- EXECUTION TIME:
0.135078
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:

-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:52:34) 
-- CODE:
do1 = float(input("distancia entre os olhos imagem 1: "))
dnq1 = float(input("distancia entre nariz e queixo imagem 1: "))
do2 = float(input("distancia entre os olhos imagem 2: "))
dnq2 = float(input("distancia entre nariz e queixo imagem 2: "))
do3 = float(input("distancia entre os olhos imagem 3: "))
dnq3 = float(input("distancia entre nariz e queixo imagem 3: "))
p1 = do1/dnq1
p2 = do2/dnq2
p3 = do3/dnq3
c1 = abs(p1-p2)
c2 = abs(p2-p3)
c3 = abs(p1-p3)
v = min(c1,c2,c3)
if v==c1:
	print("1 e 2")
elif v==c2:
	print("2 e 3")
elif v==c3:
	print("1 e 3")
-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:52:47) 
-- CODE:
do1 = float(input("distancia entre os olhos imagem 1: "))
dnq1 = float(input("distancia entre nariz e queixo imagem 1: "))
do2 = float(input("distancia entre os olhos imagem 2: "))
dnq2 = float(input("distancia entre nariz e queixo imagem 2: "))
do3 = float(input("distancia entre os olhos imagem 3: "))
dnq3 = float(input("distancia entre nariz e queixo imagem 3: "))
p1 = do1/dnq1
p2 = do2/dnq2
p3 = do3/dnq3
c1 = abs(p1-p2)
c2 = abs(p2-p3)
c3 = abs(p1-p3)
v = min(c1,c2,c3)
if v==c1:
	print("1 e 2")
elif v==c2:
	print("2 e 3")
elif v==c3:
	print("1 e 3")
-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:53:02) 
-- CODE:
do1 = float(input("distancia entre os olhos imagem 1: "))
dnq1 = float(input("distancia entre nariz e queixo imagem 1: "))
do2 = float(input("distancia entre os olhos imagem 2: "))
dnq2 = float(input("distancia entre nariz e queixo imagem 2: "))
do3 = float(input("distancia entre os olhos imagem 3: "))
dnq3 = float(input("distancia entre nariz e queixo imagem 3: "))
p1 = do1/dnq1
p2 = do2/dnq2
p3 = do3/dnq3
c1 = abs(p1-p2)
c2 = abs(p2-p3)
c3 = abs(p1-p3)
v = min(c1,c2,c3)
if v==c1:
	print("1 e 2")
elif v==c2:
	print("2 e 3")
elif v==c3:
	print("1 e 3")
-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 09:57:16) 
-- CODE:
do1 = float(input("distancia entre os olhos imagem 1: "))
dnq1 = float(input("distancia entre nariz e queixo imagem 1: "))
do2 = float(input("distancia entre os olhos imagem 2: "))
dnq2 = float(input("distancia entre nariz e queixo imagem 2: "))
do3 = float(input("distancia entre os olhos imagem 3: "))
dnq3 = float(input("distancia entre nariz e queixo imagem 3: "))
	p1 = do1/dnq1
	p2 = do2/dnq2
	p3 = do3/dnq3
	c1 = abs(p1-p2)
	c2 = abs(p2-p3)
	c3 = abs(p1-p3)
	v = min(c1,c2,c3)
	if v==c1:
		print("1 e 2")
	elif v==c2:
		print("2 e 3")
	elif v==c3:
		print("1 e 3")
-- EXECUTION TIME:
0.168758
-- ERROR:
  File "/home/codebench/codes/1675/1932/main.py", line 7
    p1 = do1/dnq1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:57:47) 
-- CODE:
do1 = float(input("distancia entre os olhos imagem 1: "))
dnq1 = float(input("distancia entre nariz e queixo imagem 1: "))
do2 = float(input("distancia entre os olhos imagem 2: "))
dnq2 = float(input("distancia entre nariz e queixo imagem 2: "))
do3 = float(input("distancia entre os olhos imagem 3: "))
dnq3 = float(input("distancia entre nariz e queixo imagem 3: "))
	p1 = do1/dnq1
	p2 = do2/dnq2
	p3 = do3/dnq3
	c1 = abs(p1-p2)
	c2 = abs(p2-p3)
	c3 = abs(p1-p3)
	v = min(c1,c2,c3)
	if v==c1:
		print("1 e 2")
	elif v==c2:
		print("2 e 3")
	elif v==c3:
		print("1 e 3")
-- ERROR:
File "XXXX", line 7
    p1 = do1/dnq1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 09:58:05) 
-- CODE:
do1 = float(input("distancia entre os olhos imagem 1: "))
dnq1 = float(input("distancia entre nariz e queixo imagem 1: "))
do2 = float(input("distancia entre os olhos imagem 2: "))
dnq2 = float(input("distancia entre nariz e queixo imagem 2: "))
do3 = float(input("distancia entre os olhos imagem 3: "))
dnq3 = float(input("distancia entre nariz e queixo imagem 3: "))
p1 = do1/dnq1
p2 = do2/dnq2
p3 = do3/dnq3
c1 = abs(p1-p2)
c2 = abs(p2-p3)
c3 = abs(p1-p3)
v = min(c1,c2,c3)
if v==c1:
	print("1 e 2")
elif v==c2:
	print("2 e 3")
elif v==c3:
	print("1 e 3")
-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 09:58:07) 
-- CODE:
do1 = float(input("distancia entre os olhos imagem 1: "))
dnq1 = float(input("distancia entre nariz e queixo imagem 1: "))
do2 = float(input("distancia entre os olhos imagem 2: "))
dnq2 = float(input("distancia entre nariz e queixo imagem 2: "))
do3 = float(input("distancia entre os olhos imagem 3: "))
dnq3 = float(input("distancia entre nariz e queixo imagem 3: "))
p1 = do1/dnq1
p2 = do2/dnq2
p3 = do3/dnq3
c1 = abs(p1-p2)
c2 = abs(p2-p3)
c3 = abs(p1-p3)
v = min(c1,c2,c3)
if v==c1:
	print("1 e 2")
elif v==c2:
	print("2 e 3")
elif v==c3:
	print("1 e 3")
-- EXECUTION TIME:
0.117755
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
